@@ -4,7 +4,8 @@ glyph; OCC curve loops can now be oriented based on the sign of the first curve;
 better mesh node visualization; added suppport for model attributes in MSH2
 files; new mesh renumbering capabilities in the API; small bug fixes.
 
-* New API functions: model/getEntitiesForPhysicalName; mesh/computeRenumbering.
+* New API functions: model/getEntitiesForPhysicalName, mesh/computeRenumbering,
+  mesh/getVisibility.
 
 * Incompatible API changes: new optional argument to occ/addCircleArc,
   mesh/renumberNodes, mesh/renumberElements and view/getListData; new optional
